[package]
name = "rreverse"
version = "0.1.0"
authors = ["Grant Miner <xxgsoftware@gmail.com>"]

[dependencies]
kdtree = "~0.3.1"
quick-csv = "~0.1.6"
time = "~0.1.35"
lazy_static = "~0.2.1"
rocket = "~0.1.1"
rocket_codegen = "~0.1.1"
serde = "~0.8"
serde_json = "~0.8"
serde_derive = "~0.8"
rustc-serialize = "~0.3.22"

[[bin]]
name = "web"
path = "src/webserver.rs"

[[bin]]
name = "cmd"
path = "src/cmdline.rs"
